# ultima

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: ast.h  parser.h  token.h
src/: hello.ult  main.c  parser.c  runtime.c  token.c
